mejorando base de datos

--- a/visitantes.html
+++ b/visitantes.html
@@ -12,10 +12,19 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-12 col-md-6 col-12">
-            <h3></h3>
             <div class="form-group">
               <label for="exampleInputNombre">Nombre y apellido</label>
               <input type="text" class="form-control" id="exampleInputNombre" aria-describedby="emailHelp" placeholder="nombre y apellido">
+            </div>
+            <div class="form-group">
+              <label for="galpon">Galpon</label>
+              <input type="text" class="form-control" id="galpon" aria-describedby="emailHelp" placeholder="galpon">
+            </div>
+            <div class="form-group">
+              <label for="patente">Patente</label>
+              <input type="text" class="form-control" id="patente" aria-describedby="emailHelp" placeholder="patente">
+              <label for="estacionamiento">Estacionamiento</label>
+              <input type="text" class="form-control" id="estacionamiento" aria-describedby="emailHelp" placeholder="estacionamiento">
             </div>
             <div class="form-group">
               <label for="inputState">Empresas</label>
@@ -23,12 +32,26 @@
                 <option selected>Laboratoria</option>
                 <option>Fundacion Mustakis</option>
                 <option>AguasLab </option>
+                <option>Elestudio </option>
+                <option>Robotics Labs</option>
+                <option>Fábrica de medio</option>
+                <option>Café altura</option>
+                <option>Destileria Husares</option>
+                <option>Wildproyectchile</option>
+                <option>Deseis</option>
+                <option>cdi</option>
+                <option>Tremenda</option>
+                <option>Ilegal</option>
               </select>
             </div>
-            <div class="form-group">
+            <!-- <div class="form-group">
               <label for="Email">Email address</label>
               <input type="email" class="form-control" id="Email" aria-describedby="emailHelp" placeholder="Enter email">
               <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+            </div> -->
+            <div class="form-group">
+              <label for="contacto">Contacto</label>
+              <input type="text" class="form-control" id="contacto" aria-describedby="emailHelp" placeholder="contacto">
             </div>
             <button  class="btn btn-primary" onclick="guardarVisitantes()">Guardar</button>
           
