--- a/login.html
+++ b/login.html
@@ -5,15 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>Visit App Me</title>
 </head>
 <body>
-    <div class="container ">
-      
-      <div class="row">
-        <div class="col-sm-6 col-md-6 col-12">
-            <h3>Login</h3>
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-12 col-md-12 col-sm-12">
+        <img class="if" src="img/LOGO_If.png">
+
+      </div>
+    </div>
+
+  </div>
+
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-12 col-md-12 col-sm-12">
+            <h3>INGRESA</h3>
             <div class="form-group">
               <label for="exampleInputEmail1">Email address</label>
               <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
