--- a/opciones.html
+++ b/opciones.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>Visit App Me</title>
 </head>
 <body>
-    <div class="container">
+    <div class="container-fluid">
       <div class="row">
-        <div class="col-sm-6 col-md-6 col-12">
+        <div class="col-12 col-md-5 mx-auto">
             <h3>MENU</h3>
             <div class="form-group">
              <button class="btn" onclick="htmlvisitante()">Visitantes</button>
