--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Visit App Me</title>
 </head>
-<body>
+<body id="fondoLogin">
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-12 col-md-12 col-sm-12">
