--- a/opciones.html
+++ b/opciones.html
@@ -10,15 +10,15 @@
     <title>Visit App Me</title>
 </head>
 <body>
-    <div class="container-fluid">
+    <div class="container">
       <div class="row">
         <div class="col-12 col-md-5 mx-auto">
-            <h3>MENU</h3>
+            <h3 class="menu">MENÚ</h3>
             <div class="form-group">
-             <button class="btn" onclick="htmlvisitante()">Visitantes</button>
+             <button class="btn boton" onclick="htmlvisitante()">Visitantes</button>
             </div>
             <div class="form-group">
-              <button class="btn" id="UsuariosIFBlanco">Usuarios IFBlanco</button>
+              <button class="btn boton" id="UsuariosIFBlanco">Usuarios IFBlanco</button>
             </div>
             <div class="form-group">
                <button class="btn">Registro de Visitantes</button>
