--- a/residentesif.html
+++ b/residentesif.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -9,9 +9,29 @@
     <title>Visit App Me</title>
 </head>
 <body>
-  <div class="container">
+  <div class="container-fluid">
     <div class="row">
-      <div class="col-sm-12 col-md-6 col-12">
+      <div class="col-sm-12 col-md-12 col-12">
+          <div class="row">
+              <div class="col-sm-3 col-md-2 col-12">
+                  <img src="img/user.jpg" alt="">
+              </div>
+              <div class="col-sm-3 col-md-2 col-12">
+                    <img src="img/user.jpg" alt="">
+                </div>
+                <div class="col-sm-3 col-md-2 col-12">
+                        <img src="img/user.jpg" alt="">
+                    </div>
+                    <div class="col-sm-3 col-md-2 col-12">
+                            <img src="img/user.jpg" alt="">
+                        </div>
+                        <div class="col-sm-3 col-md-2 col-12">
+                                <img src="img/user.jpg" alt="">
+                            </div>
+                            <div class="col-sm-3 col-md-2 col-12">
+                                    <img src="img/user.jpg" alt="">
+                                </div>
+          </div>
         <div id="contendorResidentes"></div>
         
     </div>
